--- a/ClientApp/src/app/app.component.html
+++ b/ClientApp/src/app/app.component.html
@@ -1,10 +1,6 @@
-<div class='container-fluid'>
-  <div class='row'>
-    <div class='col-sm-3'>
-      <app-nav-menu></app-nav-menu>
-    </div>
-    <div class='col-sm-9 body-content'>
-      <router-outlet></router-outlet>
-    </div>
-  </div>
+<!--The content below is only a placeholder and can be replaced.-->
+<div class="container">
+  <div class="display-1 text-center">Tyrell</div>
+  <hr />
+  <router-outlet></router-outlet>
 </div>
