--- a/Client/src/app/welcome/welcome.component.html
+++ b/Client/src/app/welcome/welcome.component.html
@@ -1,3 +1,13 @@
-<div class="row no-gutters">
-  <div class="WholePage"></div>
+<div class="row py-2">
+  <div class="col">
+    <img src="../../assets/logoNumberOne.svg" style="filter: invert(1); width: 200px;" class="img mx-auto d-block">
+  </div>
+</div>
+
+<div class="row">
+  <div class="col">
+    <div class="display-3 Link" (click)="Blog()">
+      Blog
+    </div>
+  </div>
 </div>
