drastically reduced the amount of api calls made by storing posts in browser session and route resue strategy

--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -2,7 +2,7 @@
   <div class="AppContainer">
     <div class="container">
       <!--<app-nav></app-nav>-->
-      <button class="btn" (click)="ToggleTheme()">*</button>
+      <!--<button class="btn" (click)="ToggleTheme()">*</button>-->
       <router-outlet></router-outlet>
     </div>
   </div>
