--- a/Client/src/app/post/post.component.scss
+++ b/Client/src/app/post/post.component.scss
@@ -2,11 +2,6 @@
   color: rgb(197,31,93);
   cursor: pointer;
 }
-
-.Muted theme-dark {
-  color: rgb(200,200,200);
-}
-
-.Muted theme-light {
+.Muted {
   color: rgb(50,50,50);
 }
