--- a/Client/src/app/welcome/welcome.component.html
+++ b/Client/src/app/welcome/welcome.component.html
@@ -1,13 +1,65 @@
-<div class="row py-2">
-  <div class="col">
-    <img src="../../assets/logoNumberOne.svg" style="filter: invert(1); width: 200px;" class="img mx-auto d-block">
-  </div>
-</div>
+<!--<div class="row py-2">-->
+<!--<div class="col">-->
+<!--<img src="../../assets/logoNumberOne.svg" style="filter: invert(1); width: 200px;" class="img mx-auto d-block">-->
+<!--</div>-->
+<!--</div>-->
+
+<!--<div class="row">-->
+<!--<div class="col">-->
+<!--<div class="display-3 Link" (click)="Blog()">-->
+<!--Blog-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
 
 <div class="row">
   <div class="col">
-    <div class="display-3 Link" (click)="Blog()">
-      Blog
+    <div class="display-2 text-center">
+      Harrison Barker
+    </div>
+  </div>
+</div>
+<hr class="Break">
+<div class="row">
+  <div class="col">
+    <div class="ThinText text-center">
+      Bio: <br>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Arcu non sodales neque sodales ut etiam sit. Etiam erat velit scelerisque in dictum non.
+    </div>
+  </div>
+</div>
+<hr class="Break">
+<div class="row">
+  <div class="col">
+    <img src="../../assets/blogIcon.svg" class="img img-fluid Icon">
+  </div>
+  <div class="col">
+    <img src="../../assets/workIcon.svg" class="img img-fluid Icon">
+  </div>
+  <div class="col">
+    <img src="../../assets/aboutIcon.svg" class="img img-fluid Icon">
+  </div>
+</div>
+<hr class="Break">
+<div class="row">
+  <div class="col">
+    <div class="display-4 text-center">
+      Work
+    </div>
+  </div>
+</div>
+<hr class="Break">
+<div class="row">
+  <div class="col">
+    <div class="display-4 text-center">
+      About
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col">
+    <div class="ThinText text-center">
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Porta lorem mollis aliquam ut porttitor. Mi in nulla posuere sollicitudin aliquam. Erat nam at lectus urna duis. Dictum at tempor commodo ullamcorper a lacus vestibulum sed arcu. Vel pharetra vel turpis nunc eget lorem dolor sed. Faucibus in ornare quam viverra orci sagittis. Feugiat pretium nibh ipsum consequat nisl vel pretium. Vel quam elementum pulvinar etiam non quam. Eu tincidunt tortor aliquam nulla facilisi cras fermentum odio. Ut eu sem integer vitae justo eget magna fermentum. Id ornare arcu odio ut sem nulla pharetra diam sit. Dictum non consectetur a erat nam at lectus. Nulla pellentesque dignissim enim sit amet. Amet dictum sit amet justo donec enim diam vulputate ut.
     </div>
   </div>
 </div>
