--- a/Client/src/app/post-details/post-details.component.html
+++ b/Client/src/app/post-details/post-details.component.html
@@ -1,12 +1,12 @@
 <div *ngIf="post?.isVisible">
   <div class="row">
     <div class="col">
-      <div class="display-3">
+      <div class="display-4">
         {{post.title}}
       </div>
     </div>
   </div>
-
+  <hr>
   <div class="row">
     <div class="col">
       <markdown>
@@ -22,4 +22,4 @@
   </div>
 </div>
 
-<button class="btn btn-info btn-sm" (click)="back()">Back</button>
+<button class="btn btn-light btn-sm" (click)="back()">Back</button>
