simplified home page

--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -1,9 +1,10 @@
-<main id="app-root" [class]="theme === 'light' ? 'theme-light' : 'theme-dark'" style="height: 100%;">
-  <div class="AppContainer">
-    <div class="container">
-      <!--<app-nav></app-nav>-->
-      <!--<button class="btn" (click)="ToggleTheme()">*</button>-->
-      <router-outlet></router-outlet>
-    </div>
-  </div>
-</main>
+<!--<main id="app-root" [class]="theme === 'light' ? 'theme-light' : 'theme-dark'" style="height: 100%;">-->
+<!--<div class="AppContainer">-->
+<div class="container h-100">
+  <!--<div class="container d-flex h-100">-->
+  <!--<app-nav></app-nav>-->
+  <!--<button class="btn" (click)="ToggleTheme()">*</button>-->
+  <router-outlet></router-outlet>
+</div>
+<!--</div>-->
+<!--</main>-->
