--- a/Client/src/app/welcome/welcome.component.html
+++ b/Client/src/app/welcome/welcome.component.html
@@ -1,88 +1,31 @@
-<!--<div class="row py-2">-->
+<!--<div class="row justify-content-center align-self-center">-->
 <!--<div class="col">-->
-<!--<img src="../../assets/logoNumberOne.svg" style="filter: invert(1); width: 200px;" class="img mx-auto d-block">-->
-<!--</div>-->
+<!--<div class="display-2 text-center">-->
+<!--Harrison Barker-->
 <!--</div>-->
 
-<!--<div class="row">-->
-<!--<div class="col">-->
-<!--<div class="display-3 Link" (click)="Blog()">-->
-<!--Blog-->
+<!--<hr class="Break">-->
+<!--<a class="btn btn-social-icon btn-twitter">-->
+<!--<span class="fa fa-twitter"></span>-->
+<!--</a>-->
 <!--</div>-->
 <!--</div>-->
-<!--</div>-->
-
-<div class="row">
-  <div class="col">
+<div class="row align-items-center h-100">
+  <div class="col mx-auto">
     <div class="display-2 text-center">
       Harrison Barker
     </div>
-  </div>
-</div>
-<hr class="Break">
-<div class="row">
-  <div class="col">
-    <div class="ThinText text-center">
-      Bio: <br>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-      magna aliqua. Arcu non sodales neque sodales ut etiam sit. Etiam erat velit scelerisque in dictum non.
+
+    <hr class="Break">
+
+    <div class="p-0 text-muted text-center">
+      &copy; 2019 OneExampleCompany, Harrison Barker. All rights reserved.
     </div>
-    <button class="btn btn-light btn-block mt-3" (click)="routeBlog()">
-      Blog
-    </button>
-  </div>
-</div>
-<hr class="Break">
-<div class="row">
-  <div class="col">
-    <div class="display-4 text-center">
-      Work
-    </div>
-  </div>
-</div>
-<div class="row">
-  <div class="col">
-    <div class="card">
-      <div class="card-body">
-        <p class="card-text">
-          Repo
-        </p>
-      </div>
-    </div>
-  </div>
-  <div class="col">
-    <div class="card">
-      <div class="card-body">
-        <p class="card-text">
-          Repo
-        </p>
-      </div>
-    </div>
-  </div>
-  <div class="col">
-    <div class="card">
-      <div class="card-body">
-        <p class="card-text">
-          Repo
-        </p>
-      </div>
-    </div>
-  </div>
-</div>
-<hr class="Break">
-<div class="row">
-  <div class="col">
-    <div class="display-4 text-center">
-      About
-    </div>
-  </div>
-</div>
-<div class="row">
-  <div class="col">
-    <div class="ThinText text-center">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-      magna aliqua. Porta lorem mollis aliquam ut porttitor. Mi in nulla posuere sollicitudin aliquam. Erat nam at
-      lectus urna duis. Dictum at tempor commodo ullamcorper a lacus vestibulum sed arcu.
+
+    <div class="text-center my-2">
+      <a class="btn btn-social-icon btn-twitter" target="_blank" href="https://twitter.com/Harrison_png">
+        <span class="fa fa-twitter"></span>
+      </a>
     </div>
   </div>
 </div>
