--- a/Client/src/app/welcome/welcome.component.html
+++ b/Client/src/app/welcome/welcome.component.html
@@ -1,19 +1,19 @@
-<!--<div class="row justify-content-center align-self-center">-->
-<!--<div class="col">-->
-<!--<div class="display-2 text-center">-->
-<!--Harrison Barker-->
-<!--</div>-->
-
-<!--<hr class="Break">-->
-<!--<a class="btn btn-social-icon btn-twitter">-->
-<!--<span class="fa fa-twitter"></span>-->
-<!--</a>-->
-<!--</div>-->
-<!--</div>-->
 <div class="row align-items-center h-100">
   <div class="col mx-auto">
     <div class="display-2 text-center">
       Harrison Barker
+    </div>
+
+    <!--<p>-->
+    <!--<ngb-alert [dismissible]="false">-->
+    <!--<strong>Warning!</strong> Better check yourself, you're not looking too good.-->
+    <!--</ngb-alert>-->
+    <!--</p>-->
+
+    <div class="text-center">
+      <button class="btn btn-sm btn-outline-info" (click)="routeBlog()" placement="top" ngbTooltip="Goes to the blog">
+        Blog
+      </button>
     </div>
 
     <hr class="Break">
