Colour changes and other design stuuf

--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!--<main id="app-root" [class]="theme === 'light' ? 'theme-light' : 'theme-dark'" style="height: 100%;">-->
 <!--<div class="AppContainer">-->
-<div class="container h-100">
+<div class="container h-100" id="container">
   <!--<div class="container d-flex h-100">-->
   <!--<app-nav></app-nav>-->
   <!--<button class="btn" (click)="ToggleTheme()">*</button>-->
