--- a/Client/src/app/post/post.component.html
+++ b/Client/src/app/post/post.component.html
@@ -2,7 +2,7 @@
   <div class="col">
     <div>
       <div class="display-4 PostLink" (click)="route()">{{post.title}}</div>
-      <p class="Muted">{{post.author.firstName}} {{post.author.lastName}} | {{post.createdAt | date}}</p>
+      <p class="PostMuted">{{post.author.firstName}} {{post.author.lastName}} | {{post.createdAt | date}}</p>
       <!--<button class="btn btn-info btn-sm" (click)="route()">data</button>-->
     </div>
   </div>
