--- a/Client/src/app/post/post.component.scss
+++ b/Client/src/app/post/post.component.scss
@@ -1,7 +1,8 @@
 .PostLink {
-  color: rgb(197,31,93);
+  //color: rgb(197,31,93);
   cursor: pointer;
+  color: #FFF568;
 }
-.Muted {
-  color: rgb(50,50,50);
+.PostMuted {
+  color: rgb(200,200,200);
 }
