--- a/Client/src/styles.scss
+++ b/Client/src/styles.scss
@@ -1,7 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 body {
   margin: 0;
+  background: rgb(55, 41, 99);
 }
 .ThinText {
   font-weight: 200;
+}
+.Muted {
+  color: rgb(230,230,230);
 }
