--- a/Client/src/app/welcome/welcome.component.scss
+++ b/Client/src/app/welcome/welcome.component.scss
@@ -7,5 +7,8 @@
   cursor: pointer;
 }
 .Break {
-  border-top: 1px solid rgba(33,33,33,0.5);
+  border-top: 1px solid rgba(130,130,130,0.8);
+}
+.RouteButton {
+  color: rgb(211,54,130);
 }
