added new social icons and cool articles page

--- a/Client/src/app/welcome/welcome.component.html
+++ b/Client/src/app/welcome/welcome.component.html
@@ -17,6 +17,9 @@
       <div (click)="routeBlog()">
         <fa-icon [icon]="faCoffee" size="lg"></fa-icon>
       </div>
+      <div (click)="routeArticles()">
+        <button class="btn btn-sm RouteButton">Some cool articles</button>
+      </div>
     </div>
 
     <hr class="Break">
@@ -27,7 +30,16 @@
 
     <div class="text-center my-2">
       <a target="_blank" href="https://twitter.com/Harrison_png" style="color: white">
-        <fa-icon [icon]="faTwitter" size="lg"></fa-icon>
+        <fa-icon [icon]="faTwitter" size="lg" class="mx-2"></fa-icon>
+      </a>
+      <a target="_blank" href="https://www.instagram.com/harrisonbarker.png" style="color: white">
+        <fa-icon [icon]="faInstagram" size="lg" class="mx-2"></fa-icon>
+      </a>
+      <a target="_blank" href="https://www.reddit.com/user/High_Impedance" style="color: white">
+        <fa-icon [icon]="faReddit" size="lg" class="mx-2"></fa-icon>
+      </a>
+      <a target="_blank" href="https://github.com/MrHarrisonBarker" style="color: white">
+        <fa-icon [icon]="faGithub" size="lg" class="mx-2"></fa-icon>
       </a>
     </div>
   </div>
