Added river button

--- a/Client/src/app/welcome/welcome.component.html
+++ b/Client/src/app/welcome/welcome.component.html
@@ -20,6 +20,10 @@
       <div (click)="routeArticles()">
         <button class="btn btn-sm RouteButton">Some cool articles</button>
       </div>
+
+      <div (click)="routeRiver()">
+        <button class="btn btn-sm RouteButton">The River</button>
+      </div>
     </div>
 
     <hr class="Break">
