New button design and colour scheme

--- a/Client/src/app/articles/articles.component.html
+++ b/Client/src/app/articles/articles.component.html
@@ -1,5 +1,6 @@
-<fa-icon [icon]="faDoubleArrowLeft" size="2x" [routerLink]="['/']"></fa-icon>
+<!--<fa-icon [icon]="faDoubleArrowLeft" size="2x" [routerLink]="['/']"></fa-icon>-->
 
+<img src="../../assets/logoNumberOneWhite.svg" class="Back" [routerLink]="['/']">
 
 <div class="display-2">#Articles</div>
 <div *ngFor="let article of Articles">
